--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -26,6 +26,8 @@ img[src$='#floatright']
     /* whatever else styles you fancy here */
 }
 
-.center {
-	text-align:center;
+.small-image {
+    width: 50%;
+    height: 50%;
 }
+  
